# subly-monorepo

./: .gitignore  Anchor.toml  package.json  readme.md
frontend/: .env.local.example  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: header.tsx  paypal-setup-modal.tsx  profile-interface.tsx  stake-interface.tsx  subscription-interface.tsx
frontend/lib/: subly.ts
frontend/lib/idl/: subly_solana_program.json
patches/solana-slot-hashes/: Cargo.toml
programs/subly-solana-program/: Cargo.toml
programs/subly-solana-program/src/: lib.rs
programs/subly-solana-program/src/subly/: constants.rs  error.rs
programs/subly-solana-program/src/subly/instructions/: claim_operator.rs  claim_user.rs  find_due_subscriptions.rs  fund_rewards.rs  get_paypal_recipient.rs  get_subscription_services.rs  get_user_stake.rs  get_user_subscriptions.rs  initialize.rs  mod.rs  record_subscription_payment.rs  register_paypal_recipient.rs  register_subscription_service.rs  subscribe_service.rs  unstake.rs  unsubscribe_service.rs
programs/subly-solana-program/src/subly/state/: mod.rs
scripts/: initialize-devnet.ts  paypal-client.ts  process-new-subscriptions.ts  subscription-services.json
subly-anchor/: .env.example  Cargo.toml  package.json
subly-anchor/frontend/: package.json  pnpm-lock.yaml
subly-anchor/frontend/app/: layout.tsx  page.tsx
subly-anchor/frontend/components/: providers.tsx  stake-interface.tsx  subscription-interface.tsx
subly-anchor/frontend/hooks/: use-solana-name.ts
subly-anchor/frontend/lib/idl/: subly_solana_program.json
subly-anchor/scripts/: process-new-subscriptions.ts  process-subscriptions.ts  register-subscription-services.ts  subscription-services.json
subly_arcium/: Anchor.toml  Arcium.toml  Cargo.toml
subly_arcium/artifacts/: circuits_hash.txt
subly_arcium/encrypted-ixs/src/: lib.rs
subly_arcium/programs/subly_arcium/: Cargo.toml
subly_arcium/programs/subly_arcium/src/: lib.rs
subly_arcium/programs/subly_arcium/src/subly/: constants.rs  error.rs
subly_arcium/programs/subly_arcium/src/subly/instructions/: initialize.rs  stake.rs  unstake.rs
subly_arcium/programs/subly_arcium/src/subly/state/: mod.rs
subly_arcium/tests/: subly_arcium.ts
tests/: subly-solana-program.ts
(+7 files in other folders)
